Fixed contact page to make it responsive on mobile devices.

--- a/backend/server/frontend/public/styles/main.css
+++ b/backend/server/frontend/public/styles/main.css
@@ -1996,7 +1996,8 @@ a {
     text-decoration: underline;
 }
 
-.form {
+.form,
+#contact_form {
     position: relative;
     background: #FFFFFF;
     max-width: 360px;
